--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/line_chart"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="220dp"
         android:layout_marginTop="10dp"
         android:elevation="4dp" />
 
@@ -20,6 +20,28 @@
         android:layout_below="@id/line_chart"
         android:layout_marginTop="10dp"
         android:text="query bitcoin api" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/bitcoin_api_button">
+
+        <Spinner
+            android:id="@+id/stock_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            />
+
+        <Spinner
+            android:id="@+id/bitcoin_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+
+
+    </LinearLayout>
+
 
 
 </RelativeLayout>
