--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,86 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".MainActivity">
+        tools:context="com.btcbrunch.MainActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/btc_brunch_logo_a"
+        android:scaleType="centerCrop"
+         />
 
         <!--Card View1 of the Main Screen-->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view_stock_bitcoin_selection"
-            android:layout_marginTop="30dp"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:id="@+id/card_view_stock_bitcoin_selection"-->
+<!--            android:layout_marginTop="30dp"-->
+<!--            android:layout_width="300dp"-->
+<!--            android:layout_height="wrap_content"-->
 
-            android:layout_centerHorizontal="true">
+<!--            android:layout_centerHorizontal="true">-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical">-->
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/pexels_photo_6777575" />
+<!--                <ImageView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="150dp"-->
+<!--                    android:scaleType="centerCrop"-->
+<!--                    android:src="@drawable/pexels_photo_6777575" />-->
 
-                <TextView
-                    android:id="@+id/text_view_candle_stick_path"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="8dp"
-                    android:fontFamily="sans-serif-black"
-                    android:text="Commodity/Bitcoin Line Chart"
-                    android:textSize="18sp" />
+<!--                <TextView-->
+<!--                    android:id="@+id/text_view_candle_stick_path"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:layout_margin="8dp"-->
+<!--                    android:fontFamily="sans-serif-black"-->
+<!--                    android:text="Commodity/Bitcoin Line Chart"-->
+<!--                    android:textSize="18sp" />-->
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
-        </androidx.cardview.widget.CardView>
+<!--        </androidx.cardview.widget.CardView>-->
 
         <!--The Card View2 of the Main Screen-->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view_candle_stick_selection"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/card_view_stock_bitcoin_selection"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="30dp"
-            android:layout_marginTop="25dp">
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:id="@+id/card_view_candle_stick_selection"-->
+<!--            android:layout_width="300dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/card_view_stock_bitcoin_selection"-->
+<!--            android:layout_centerHorizontal="true"-->
+<!--            android:layout_marginBottom="30dp"-->
+<!--            android:layout_marginTop="25dp">-->
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical">-->
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="150dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/candle_stick_chart_image" />
+<!--                <ImageView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="150dp"-->
+<!--                    android:scaleType="centerCrop"-->
+<!--                    android:src="@drawable/candle_stick_chart_image" />-->
 
-                <TextView
-                    android:id="@+id/text_view_stock_bitcoin_path"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="8dp"
-                    android:fontFamily="sans-serif-black"
-                    android:text="Cryptochart"
-                    android:textSize="18sp" />
+<!--                <TextView-->
+<!--                    android:id="@+id/text_view_stock_bitcoin_path"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_gravity="center"-->
+<!--                    android:layout_margin="8dp"-->
+<!--                    android:fontFamily="sans-serif-black"-->
+<!--                    android:text="Cryptochart"-->
+<!--                    android:textSize="18sp" />-->
 
-            </LinearLayout>
+<!--            </LinearLayout>-->
 
-        </androidx.cardview.widget.CardView>
+<!--        </androidx.cardview.widget.CardView>-->
         <!--End of Card Views-->
 
     </RelativeLayout>
 
-</ScrollView>
+
 
 
