--- a/app/src/main/res/layout/activity_bit_coin_candle_stick.xml
+++ b/app/src/main/res/layout/activity_bit_coin_candle_stick.xml
@@ -1,38 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".BitCoinCandleStickActivity">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context="com.btcbrunch.BitCoinCandleStickActivity">
 
-    <com.github.mikephil.charting.charts.CandleStickChart
-        android:id="@+id/candle_stick_chart"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:layout_marginTop="0dp"
-        android:elevation="4dp" />
+<!--<com.github.mikephil.charting.charts.CandleStickChart-->
+<!--    android:id="@+id/candle_stick_chart"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="220dp"-->
+<!--    android:layout_marginTop="0dp"-->
+<!--    android:elevation="4dp" />-->
 
-    <Button
-        android:id="@+id/candle_stick_api_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/candle_stick_chart"
-        android:layout_marginTop="10dp"
-        android:text="present candlestick data" />
 
-    <!--The Spinners for the stock tickers and bitcoin prices/stock prices-->
-    <LinearLayout
-        android:id="@+id/spinner_holder"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/candle_stick_api_button">
+<!--<LinearLayout-->
+<!--    android:id="@+id/button_holder"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_below="@id/candle_stick_chart">-->
+<!--    &lt;!&ndash;The Query Bitcoin API buttons&ndash;&gt;-->
+<!--    <Button-->
+<!--        android:id="@+id/candle_stick_api_button0"-->
+<!--        android:layout_weight="1"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="44dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:layout_marginStart="2dp"-->
+<!--        android:text="7d" />-->
 
-        <Spinner
-            android:id="@+id/bitcoin_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+<!--    <Button-->
+<!--        android:id="@+id/candle_stick_api_button1"-->
+<!--        android:layout_weight="1"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="44dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:layout_marginStart="2dp"-->
+<!--        android:text="14d" />-->
 
-    </LinearLayout>
+<!--    <Button-->
+<!--        android:id="@+id/candle_stick_api_button2"-->
+<!--        android:layout_weight="1"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="44dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:layout_marginStart="2dp"-->
+<!--        android:text="30d" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/candle_stick_api_button3"-->
+<!--        android:layout_weight="1"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="44dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:layout_marginStart="2dp"-->
+<!--        android:text="90d" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/candle_stick_api_button4"-->
+<!--        android:layout_weight="1"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="44dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:layout_marginStart="2dp"-->
+<!--        android:text="180" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/candle_stick_api_button5"-->
+<!--        android:layout_weight="1"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="44dp"-->
+<!--        android:layout_marginTop="12dp"-->
+<!--        android:layout_marginStart="2dp"-->
+<!--        android:layout_marginEnd="2dp"-->
+<!--        android:text="365" />-->
+
+
+<!--</LinearLayout>-->
+
+<!--&lt;!&ndash;The Spinners for the stock tickers and bitcoin prices/stock prices&ndash;&gt;-->
+<!--<LinearLayout-->
+<!--    android:id="@+id/spinner_holder"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_below="@+id/button_holder">-->
+
+<!--    <Spinner-->
+<!--        android:id="@+id/bitcoin_spinner"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content" />-->
+
+<!--</LinearLayout>-->
 
 </RelativeLayout>
